--- a/src/sass/_general.scss
+++ b/src/sass/_general.scss
@@ -10,10 +10,9 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  transition: color 150ms var(--timing-function),
-    background-color 150ms var(--timing-function);
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
+    'Open Sans', 'Helvetica Neue', sans-serif;
+  transition: color 150ms var(--timing-function), background-color 150ms var(--timing-function);
 }
 
 body.light-theme {
@@ -26,5 +25,8 @@ body.dark-theme {
   color: #fff;
 }
 
-
-
+.toolbar {
+  display: flex;
+  justify-content: flex-end;
+  padding: 16px 24px;
+}
